--- a/OmdbApiProject/MainWindow.xaml
+++ b/OmdbApiProject/MainWindow.xaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" WindowState="Maximized" >
+        Title="MainWindow" WindowState="Maximized"
+        >
     
     <Grid x:Name="MainGrid">
         <i:Interaction.Triggers>
